--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "next": "16.1.1",
-        "lucide-react": "latest",
-        "recharts": "latest",
         "@supabase/supabase-js": "latest",
         "clsx": "latest",
+        "jspdf": "^3.0.4",
+        "jspdf-autotable": "^5.0.2",
+        "lucide-react": "latest",
+        "next": "16.1.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "recharts": "latest",
         "tailwind-merge": "latest"
     },
     "devDependencies": {
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
         "autoprefixer": "^10.4.19",
         "eslint": "^9",
-        "eslint-config-next": "16.1.1"
+        "eslint-config-next": "16.1.1",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     }
 }
